--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: page
   </div>
   <div class="clearfix">
       Hey, Nice to see you here.<br><br>
-      I am Sibasis, a second year undergrad at <a href="cse.iitb.ac.in">Department of Computer Science and Engineering</a> at the <a href="iitb.ac.in">Indian Institute Of Technology Bombay</a>. 
+      I am Sibasis, a second year undergrad at <a href="https://cse.iitb.ac.in">Department of Computer Science and Engineering</a> at the <a href="htpps://iitb.ac.in">Indian Institute Of Technology Bombay</a>. 
 
       I am currently interning at Peter L. Reichertz Institute for Medical Informatics located at <a href= "https://www.tu-braunschweig.de/en/">TU Braunschweig</a> in a Human Pose Estimation research project under Prof. <a href="https://plri.de/en/team/thomas-deserno">Thomas Deserno</a>.<br>
 
