--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@ layout: page
 
       <a href="courses">Here</a> are a list of courses I have been involved with.<br><br>
 
-      Non academically, I like almost all outdoor games and specifically indulge in a lot in football and cricket. I like to workout occasionally too <i> (Yeah! I am quite lazy) </i>. <a href="https://www.youtube.com/channel/UC_nfjMmJlJXrhl2xbP9wgRA">Here</a> is my favourite workout channel.<br><br>
+      Non academically, I like almost all outdoor games and specifically indulge in a lot of football and cricket. I like to workout occasionally too <i> (Yeah! I am quite lazy) </i>. <a href="https://www.youtube.com/channel/UC_nfjMmJlJXrhl2xbP9wgRA">Here</a> is my favourite workout channel.<br><br>
       Also I would like you to go through <a href="https://open.spotify.com/show/2MAi0BvDc6GTFvKFPXnkCL">Lex Fridman</a>'s podcasts.<br> <br>
       
       In a non pandemic frame of world my address would have been <i>Hostel-6 IITB</i>, but now I am located at Bhubaneswar.<br>
